src/components/features/NewFurniture/NewFurniture.module.scss
@import "../../../styles/settings.scss";

.root {

  .panelBar {
    margin-bottom: 30px;
    position: relative;

    :global(.row) > * {
      border-bottom: 4px solid $border-dark-white;
    }

    .heading {
      position: relative;

      h3 {
        color: $text-orange;
        text-transform: uppercase;
        font-size: 20px;
        line-height: 38px;
        margin: 0;
        letter-spacing: 1px;
      }

      &::before {
        content: "";
        position: absolute;
        bottom: -4px;
        left: 0;
        width: 45px;
        border-bottom: 4px solid $border-orange;;
      }
    }

    .menu {
      text-align: center;
      ul {
        margin: 0;
        padding: 0;
        list-style: none;
        li {
          display: inline-block;
          margin: 0 0.5rem;
          font-weight: 600;

          a {
            color: $text-black;
            position: relative;
            text-decoration: none;
            font-size: 18px;
            display: block;

            &.active,
            &:hover {
              &::before {
                content: "";
                position: absolute;
                bottom: -4px;
                left: 0;
                width: 100%;
                border-bottom: 4px solid $border-orange;
              }
            }
          }
        }
      }
    }

    .dots {
      position: absolute;
      right: 0;
      top: 0;

      ul {
        margin: 0;
        padding: 0 0 0 1rem;
        list-style: none;
        background-color: $bg-white;
        transform: translateY(15px);

        li {
          display: inline-block;
          margin-left: 0.5rem;

          a {
            display: block;
            width: 13px;
            height: 13px;
            border-radius: 6px;
            background-color: $bg-light-silver;
            font-size: 0;

            &.active,
            &:hover {
              background-color: $bg-orange;
            }
          }
        }
      }
    }
  }

  .stickyBar {
    background-color: $bg-light-silver;
    position: fixed;
    max-width: 1140px;
    padding: 15px;
    bottom: 0;
    z-index: 5;

    .stickyBarWrapper {
      margin-right: 5px;

      .photo {
        position: relative;
        overflow: hidden;
        align-items: flex-end;

        .close {
          cursor: pointer;
          position: absolute;
          top: 0;
          right: 10%;
          transform: translate(0, 50%);
          font-size: 1.5rem;
          font-weight: 700;
          line-height: 1;
          color: $text-black;
          opacity: 0;
          z-index: 9999;
          background-color: $bg-light-silver;
        }
        
        &:hover .close {
          opacity: 1;
        }

        img {
          height: 200px;
          width: 100%;
          object-fit: cover;
        }
      }

      .compare {
        height: fit-content;
        padding-left: 0;
        padding-right: 0;
        top: 80%;

        .stickyBarOutline {
          background-color: $bg-black;
          color: $text-white;
        }
      }
    }
  }
  
  @keyframes appear {
    from {
      opacity: 0;
      filter:saturate(0);
    }
    to {
      opacity: 100;
      filter:saturate(1);
    }
  }

  .col {
    animation: appear;
    animation-duration: 1s;
  }
}

@media (min-width: 481px) {
  .col {
    width: 50%;
  }
}

@media (min-width: 769px) {
  .col {
    width: 33.333%;
  }
}

@media (min-width: 1280px) {
  .col {
    width: 25%;
  }
}

